# Mythology

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
Internal/ECS/Source/: Archetype.cpp  Archetype.cxx  CMakeLists.txt  Component.cpp  Component.cxx  Component_chunk.cxx  Component_chunk_group.cpp  Component_chunk_group.cxx  Component_group.cpp  Component_group.cxx  Component_group_mask.cpp  Component_group_mask.cxx  Component_groups.cxx  Components_chunk.cxx  Components_view.cxx  Entity.cpp  Entity.cxx  Entity_manager.cpp  Entity_manager.cxx  Entity_type.cpp  Entity_type.cxx  Hash_map.cxx  Join_view.cxx  MaiaGameEngineConfig.cmake  Shared_component.cpp  Shared_component.cxx  Tuple_helpers.cxx  World.cxx
Internal/ECS/Source/Components/: CMakeLists.txt  Local_position.cxx  Local_rotation.cxx
Internal/ECS/Source/Core/: CMakeLists.txt  Component_groups.cxx  Entity.cpp  Entity.cppm  Entity_manager.cxx
Internal/ECS/Source/Systems/: CMakeLists.txt  Transform_system.cpp  Transform_system.cppm  Transform_system.cxx
Internal/ECS/Test/UnitTest/: Archetype.constexpr.test.cpp  Archetype.test.cpp  CMakeLists.txt  Component.test.cpp  Component_chunk.test.cpp  Component_chunk_group.test.cpp  Component_group.test.cpp  Component_groups.test.cpp  Debug_object.cppm  Debug_resource.cxx  Entity_manager.test.cpp  Entity_manager_2.test.cpp  Hash_map.test.cpp  Print_tuple.cppm  World.test.cpp
Internal/GameEngine/: CMakeLists.txt
Internal/GameEngine/CMake/Modules/: FindMicrosoftGSL.cmake
Internal/GameEngine/Source/: CMakeLists.txt  Component.cxx  Component_group.cpp  Component_group_mask.cxx  Components_chunk.cpp  Entity.cxx  Entity_manager.cxx  Entity_type.cpp
Internal/GameEngine/Source/Components/: CMakeLists.txt  Local_position.cxx
Internal/GameEngine/Source/Systems/: Transform_system.cpp  Transform_system.cxx
Internal/GameEngine/Test/UnitTest/: CMakeLists.txt  Component_group.test.cpp  Entity_manager.test.cpp
Internal/Input/Source/: CMakeLists.txt  Game_controller_state.cppm  Input_mapping.cxx  Input_state.cppm  Keyboard_state.cppm  Module.cppm  Module.cxx  Mouse_state.cxx
Internal/Renderer/Source/: CMakeLists.txt
Internal/Renderer/Source/D3D12/: CMakeLists.txt
Internal/Renderer/Source/Vulkan/: Allocation_callbacks.ixx  Buffer.cpp  Buffer.cxx  Buffer_resources.cpp  Buffer_resources.cppm  Buffer_resources.cxx  CMakeLists.txt  Check.cpp  Check.cxx  Command_buffer.cpp  Command_buffer.cppm  Command_buffer.cxx  Command_pool.cpp  Command_pool.cxx  Descriptor_pool.cpp  Descriptor_pool.cxx  Descriptor_set.cpp  Descriptor_set.cxx  Descriptor_set_layout.cpp  Descriptor_set_layout.cxx  Device.cpp  Device.cxx  Device.ixx  Device.mxx  Device_memory.cpp  Device_memory.cxx  Device_memory.ixx  Fence.cpp  (+40 more)
Internal/Shaders/Source/: CMakeLists.txt  Color_pixel_shader.hlsl  Color_vertex_shader.hlsl  Imgui.fragment.hlsl  Imgui.vertex.hlsl  Position_pixel_shader.hlsl  Position_vertex_shader.hlsl  Triangle.vertex.hlsl  User_interface_pixel_shader.hlsl  User_interface_vertex_shader.hlsl  White.fragment.hlsl
Internal/Utilities/: .gitignore  CMakeLists.txt
Internal/Utilities/Source/: CMakeLists.txt  MaiaUtilitiesConfig.cmake
Internal/Utilities/Test/: CMakeLists.txt
Internal/glTF/Source/: CMakeLists.txt  glTF.cpp  glTF.cppm  glTF.cxx
Source/: App.cpp  Application.cpp  Application.hpp  CMakeLists.txt  Camera.hpp  Core_window_main.cpp  D3D12_renderer.cpp  D3D12_renderer.h  Game_clock.hpp  Game_key.hpp  IInput_system.hpp  Input_state.hpp  Input_state_views.cpp  Input_state_views.hpp  Input_system.hpp  MaiaRendererConfig.cmake  Move_camera_system.cpp  Move_camera_system.hpp  Scene.cpp  Scene.hpp  Transform_camera_system.cpp  Transform_camera_system.hpp  Transform_freely_system.cpp  Transform_freely_system.hpp  Win32_main.cpp  Win32_window_main.cpp  main.cpp
Source/Addon/: Addon_interface.cppm  Addon_interface.hpp  CMakeLists.txt  Load_addon.cpp  Load_addon.cppm
Source/Components/: Camera_component.cpp  Camera_component.hpp  Mesh_ID.cpp  Mesh_ID.hpp
Source/Core/: CMakeLists.txt  Utilities.cxx  Vulkan.cpp  Vulkan.cxx
Source/ImGui/: CMakeLists.txt  ImGui.cpp  ImGui.cppm  ImGui.cxx
Source/Image/: CMakeLists.txt  Image.cpp  Image.cppm  Image.cxx
Source/Maia/GameEngine/: Component.cpp  Component_group.hpp  Components_chunk.hpp  Entity_hash.cpp  Entity_hash.hpp  Entity_type.cpp
Source/Maia/Renderer/: Matrices.hpp
Source/Render/D3D12/: Load_scene_system.cpp  Load_scene_system.hpp  Render_data.cpp  Render_data.hpp  Render_system.cpp  Render_system.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Upload_frame_data_system.cpp  Upload_frame_data_system.hpp  User_interface_pass.cpp  User_interface_pass.hpp
Source/Render/Shaders/: CMakeLists.txt  Color_pixel_shader.hlsl  Color_vertex_shader.hlsl
Source/Renderer/: Pass_data.hpp
Source/Renderer/D3D12/: Render_data.cpp  Render_data.hpp  Renderer.cpp  Renderer.hpp  Window_swap_chain.cpp  Window_swap_chain.hpp
Source/Renderer/Shaders/: Color_pixel_shader.hlsl  Color_vertex_shader.hlsl
Source/SDL/: Application.cpp  Application.cxx  Application_2.cpp  Application_2.cppm  Application_2.cxx  CMakeLists.txt  Configuration.cpp  Configuration.cppm  Configuration.cxx  Geometry.cpp  Geometry.cppm  Geometry.cxx  Render_resources.cpp  Render_resources.cppm  Render_resources.cxx  SDL.cpp  SDL.cppm  SDL.cxx  SDL_input.cpp  SDL_input.cppm  Startup_state.cpp  Startup_state.cppm  Startup_state.cxx  State.cppm  State.cxx  Vulkan_SDL.cpp  Vulkan_SDL.cppm  Vulkan_SDL.cxx
Source/Win32/: Input_system.cpp  Input_system.hpp  Win32_window.cpp  Win32_window.hpp  Window.cpp  Window.hpp
Source/Windowless/: CMakeLists.txt  Windowless.cpp  Windowless.cxx
Test/Screenshot/: CMakeLists.txt  Triangle.test.cpp
Test/Screenshot/clear_color/: Clear_color.test.cpp  clear_blue_pipeline.json
Test/Screenshot/white_triangle/: Triangle.vertex.spv  White.fragment.spv  White_triangle.test.cpp  white_triangle_pipeline.json
Test/UnitTest/: CMakeLists.txt  Component_group.test.cpp  Test_components.hpp
Test/UnitTest/Allocators/: Buddy_allocator_test.cpp
(+144 files in other folders)
